# AI-powered-web-scraper

./: .env  Dockerfile  README.md  alert_engine.py  analyzer.py  api.py  auto_explorer.py  cache.py  claim_extraction.py  cli.py  config.py  crawl_rules.py  crawler.py  credibility.py  dashboard.py  database.py  discovery.py  discovery_ai.py  embeddings.py  finance.py  knowledge_graph.py  link_extractor.py  llm_query_expansion.py  logging_config.py  main.py  monitor.py  narrative_engine.py  nlp_extra.py  propaganda_detector.py  pyproject.toml  requirements.txt  scheduler.py  scraper.py  supervisord.conf  target_profiles.py  topic_expansion.py  url_queue.py  vector_store.py
